// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderDetail rendering An order with multiple order items should match snapshot 1`] = `
"<Fragment>
  <div className=\\"order-detail\\">
    Order detail page for order 
    <span style={{...}}>
      o1
    </span>
    <hr />
    <br />
    Customer: 
    c1
  </div>
  <OrderItemList orderId=\\"o1\\" orderItems={{...}} />
  <div className=\\"order-detail-total\\">
    <span className=\\"order-detail-total-label\\">
      Total:
    </span>
    <span className=\\"order-detail-total-value\\">
      115.05
    </span>
  </div>
  <br />
  <div>
    Add more products to this order:
    <OrderItemAddWrapper orderId=\\"o1\\" />
  </div>
  <br />
  <div>
    <input className=\\"order-detail-place-order-button\\" type=\\"button\\" onClick={[Function: mockConstructor]} value=\\"Place order\\" />
    <br />
    Response printed in the developer console...
    <br />
    <Component>
      Back to order overview
    </Component>
  </div>
</Fragment>"
`;

exports[`OrderDetail rendering An order with zero order items should match snapshot 1`] = `
"<Fragment>
  <div className=\\"order-detail\\">
    Order detail page for order 
    <span style={{...}}>
      o1
    </span>
    <hr />
    <br />
    Customer: 
    c1
  </div>
  <div className=\\"order-detail--empty\\">
    This order contains no order items
  </div>
  <br />
  <div>
    Add more products to this order:
    <OrderItemAddWrapper orderId=\\"o1\\" />
  </div>
  <br />
  <div>
    <input className=\\"order-detail-place-order-button\\" type=\\"button\\" onClick={[Function: mockConstructor]} value=\\"Place order\\" />
    <br />
    Response printed in the developer console...
    <br />
    <Component>
      Back to order overview
    </Component>
  </div>
</Fragment>"
`;
